30-applications/backrest/extras/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backrest
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: backrest
  template:
    metadata:
      labels:
        app: backrest
        app.kubernetes.io/name: backrest
    spec:
      # this shit is insanely hacky (thank you Claude for coming up with it). We seed the config file only when absent and at migration version 3, because when processing migrations backrest generated keypairs and GUIDs in later migrations, so we need to make sure we create this config file only when there is none otherwise we regenerate everything and break it completely.
      containers:
        - name: backrest
          image: ghcr.io/garethgeorge/backrest:v1.14.1
          ports:
            - containerPort: 9898
          volumeMounts:
            - name: data
              mountPath: /data
          resources:
            limits:
              memory: "512Mi"
          readinessProbe:
            httpGet:
              path: /
              port: 9898
            initialDelaySeconds: 5
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: backrest-data
        - name: config-seed
          secret:
            secretName: backrest-config-seed
