30-applications/backrest/extras/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: backrest
spec:
  selector:
    app: backrest
  ports:
    - port: 9898
      targetPort: 9898
